[gd_scene load_steps=4 format=3 uid="uid://c6yes35jwc5fb"]

[ext_resource type="Script" path="res://scripts/gui.gd" id="1_1rljr"]
[ext_resource type="FontFile" uid="uid://dsfefdf6jeloj" path="res://assets/Flappy-Bird-master/lib/res/fonts/flappy-font.ttf" id="1_f45cv"]
[ext_resource type="Texture2D" uid="uid://b44mdotiags3f" path="res://assets/Flappy-Bird-master/mano.png" id="3_3i265"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_1rljr")

[node name="Mensaje" type="Sprite2D" parent="." groups=["etiquetasInicio"]]
position = Vector2(192, 472)
scale = Vector2(0.126289, 0.119464)
metadata/_edit_group_ = true

[node name="lNombreJuego" type="Label" parent="Mensaje" groups=["etiquetasInicio"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -824.01
offset_top = -3281.82
offset_right = 961.99
offset_bottom = -3030.82
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_f45cv")
theme_override_font_sizes/font_size = 250
text = "PajaroVolador"

[node name="lEmpezar" type="Label" parent="Mensaje" groups=["etiquetasInicio"]]
offset_left = -760.164
offset_top = -2678.63
offset_right = 839.836
offset_bottom = -2328.63
theme_override_colors/font_color = Color(0, 0.92549, 0, 1)
theme_override_fonts/font = ExtResource("1_f45cv")
theme_override_font_sizes/font_size = 350
text = "Empezar!"

[node name="lTap" type="Label" parent="Mensaje" groups=["etiquetasInicio"]]
offset_left = -950.204
offset_top = -535.726
offset_right = -350.204
offset_bottom = -185.726
theme_override_fonts/font = ExtResource("1_f45cv")
theme_override_font_sizes/font_size = 350
text = "TAP"
horizontal_alignment = 1

[node name="lTap2" type="Label" parent="Mensaje" groups=["etiquetasInicio"]]
offset_left = 292.98
offset_top = -535.726
offset_right = 892.98
offset_bottom = -185.726
theme_override_fonts/font = ExtResource("1_f45cv")
theme_override_font_sizes/font_size = 350
text = "TAP"
horizontal_alignment = 1

[node name="Mano" type="Sprite2D" parent="Mensaje" groups=["etiquetasInicio"]]
texture = ExtResource("3_3i265")

[node name="lPuntuacion" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 51.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_f45cv")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lPuntuacion2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 296.0
offset_right = 20.0
offset_bottom = 347.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_f45cv")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lGameOver" type="Label" parent="."]
offset_left = 80.0
offset_top = 168.0
offset_right = 323.0
offset_bottom = 219.0
theme_override_colors/font_color = Color(0.905882, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_f45cv")
theme_override_font_sizes/font_size = 50
text = "GameOver"

[node name="lNv1" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("1_f45cv")
text = "Nv:1"

[node name="lNv2" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("1_f45cv")
text = "Nv:2"

[node name="lNv3" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("1_f45cv")
text = "Nv:3"

[node name="lNv4" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("1_f45cv")
text = "Nv:4"

[node name="lScoreCantidad" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -8.0
offset_right = 18.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_f45cv")
text = "0"
horizontal_alignment = 1
